# EVF-SAM-Library

./: pyproject.toml  requirements_to_toml.py
demo/: demo.py  demo_video.py  eval.py  inference.py  inference_video.py
src/evf_sam/model/segment_anything_2/sam2/: sam2_video_predictor.py
src/evf_sam/model/segment_anything_2/sam2/modeling/: sam2_base.py
src/evf_sam/utils/: ade20k_dataset.py  dataset.py  humanparsing_dataset.py  o365_dataset.py  partimagenet_dataset.py  pascal_part_dataset.py  refer_seg_dataset.py
