[tool.poetry]
name = "evf-sam"
version = "0.1.0"
description = ""
authors = ["Bernardo Marques <bernardo@des-ai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
packaging = "*"
sentencepiece = "*"
einops = "==0.4.1"
fastapi = "==0.100.1"
markdown2 = "==2.4.10"
numpy = "*"
openai = "==0.27.8"
opencv_python = "*"
Pillow = "*"
pycocotools = "==2.0.6"
ray = "*"
Requests = "==2.31.0"
shortuuid = "==1.0.11"
tqdm = "*"
transformers = "*"
uvicorn = "==0.23.2"
scipy = "^1.11.2"
bitsandbytes = "==0.41.1"
timm = "*"
blobfile = "*"
mypy = "*"
pytest = "*"
requests = "*"
tensorboardX = "*"
ftfy = "*"
opencv-python = "*"
pyarrow = "*"
torchmetrics = "==0.7.3"
deepspeed = "*"
pycocoevalcap = "*"
torchscale = "==0.2.0"
hydra-core = "*"
accelerate = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
